--- a/demo_index.html
+++ b/demo_index.html
@@ -8,6 +8,8 @@
     <p>This is our test repository to test forking a repository and sending a pull request back to make changes to the original</p>
     <!-- Add some information about yourself below -->
     <!-- Your name -->
+    
+    <h3>editing my forked copy</h3>
 
     <!-- Your GitHub user name -->
     
